Removed tailwind and fixed css overflow issues

--- a/src/global.scss
+++ b/src/global.scss
@@ -2,8 +2,8 @@
 
 @import "@fontsource/bebas-neue";
 @import "@fontsource/saira-semi-condensed";
+@import 'scss-reset/_reset.scss';
 
-@tailwind base;
 
 :root,.normal-font {
 	font-family: "Saira Semi Condensed"; 
@@ -18,9 +18,6 @@ body {
 	overflow-x: none;
 }
 
-
-
-
-@tailwind components;
-
-@tailwind utilities
+a {
+	text-decoration: none;
+}
